# Siraa-Challenge

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/routers/: parse.py  submit.py
backend/src/: PropertyData.py  config.py  llm_client.py  main.py  storage.py  utils.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/pages/: upload.css  upload.tsx
frontend/src/: constants.ts  types.ts
frontend/src/app/: layout.tsx
frontend/src/components/: CacheBanner.tsx  FileDropzone.tsx  PropertyForm.tsx  Spinner.tsx
frontend/src/hooks/: useParse.ts
